# GameAutoTool

./: .gitignore  README.md  app.py  main.py  position_tool.py  pyproject.toml
actions/: HotkeyManager.py  ImageMatcher.py  MacroRecorder.py  Move.py  Scheduler.py  WindowsManager.py
utils/: ReadConfig.py  actions_template.json
